downgrade overzealous `warning` admonitions

--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/crowdspot/crowdspot-header.png')} />
 
-:::warning Removing A Hotspot from the Denylist with Crowdspot
+:::tip Removing A Hotspot from the Denylist with Crowdspot
 
 If a Hotspot has been added to the Denylist in error, the **only** method to have it removed is to
 file a Removal Request using [Crowdspot](https://crowdspot.io/).
@@ -468,7 +468,7 @@ Hotspots submitted on Crowdspot will be pushed to the Denylist via Github.
 
 ## Removing a Hotspot from the Denylist
 
-:::warning Removing A Hotspot from the Denylist with Crowdspot
+:::tip Removing A Hotspot from the Denylist with Crowdspot
 
 If a Hotspot has been added to the Denylist in error, the **only** method to have it removed is to
 file a Removal Request using Crowdspot.
