--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -21,7 +21,7 @@ concentrator (RAK2287) and the Pi Hat running on balena. This configuration can 
 installing the **_gatewayrs_** and **_packet forwarder_** services open sourced by
 [Nebra](https://github.com/nebraltd) and using balenaOS and [balenaCloud](https://balena.io).
 
-:::warning
+:::important
 
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2 they will earn $HNT
 only for Device Packet Transfer. Remember to keep an eye on
