--- a/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino-pg1301.mdx
@@ -19,7 +19,7 @@ Transfer Rewards but not Proof of Coverage Rewards.
 This guide covers all the steps needed to set up a Data Only Hotspot using a Raspberry Pi and
 Dragino PG1301 hat.
 
-:::warning
+:::important
 
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2 they will earn $HNT
 only for Device Packet Transfer. Remember to keep an eye on
