--- a/docs/mine-hnt/data-only-guides/dragino.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino.mdx
@@ -15,7 +15,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 This guide provides instructions on how to configure an 8-channel Dragino LoRaWAN gateway such as
 the LPS8 or DLOS8 to work with the Helium network.
 
-:::warning
+:::important
 
 Dragino Hotspots will only mine HNT through packet transfer, and is considered a Data Only Hotspot.
 The ability to mine HNT with anything other than [Approved Hotspots](https://helium.com/mine) is not
