--- a/docs/mine-hnt/denylist.mdx
+++ b/docs/mine-hnt/denylist.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Denylist
 
-:::warning Removing A Hotspot from the Denylist with Crowdspot
+:::tip Removing A Hotspot from the Denylist with Crowdspot
 
 If a Hotspot has been added to the Denylist in error, the **only** method to have it removed is to
 file a Removal Request using Crowdspot.
