--- a/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/docker-integration.mdx
@@ -89,7 +89,7 @@ If you need examples of our regional packet forwarder configurations, please see
 
 :::
 
-:::warning
+:::caution
 
 If you are using our packet forwarder, be sure to customize the `rssi_offset` field for your
 particular concentrator design. Misconfiguring this value may result in decreased Proof-of-Coverage
