--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -40,7 +40,7 @@ look slightly different.)
 
 At any time, use -h or --help to get more help for a command.
 
-:::warning
+:::tip
 
 It is a best practice to create your Helium CLI wallet on a separate machine from the one where you
 will run your Validator.
@@ -113,7 +113,7 @@ in Data Credits. [Read more about transaction fees here](/blockchain/transaction
 
 With your wallet funded, it's time to deploy and run the actual Validator.
 
-:::warning
+:::info
 
 If you haven't already, please review the
 [Validator Technical Requirements](/mine-hnt/validators/requirements). Specifically, on non-ARM
