--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -39,7 +39,7 @@ locally, it's time to create your Testnet Wallet. Run the following command to c
 command format assumes you're using the executable. If you've built the wallet from source it'll
 look slightly different.)
 
-:::warning
+:::tip
 
 It is a best practice to create your Helium CLI wallet on a separate machine from the one where you
 will run your Validator.
@@ -134,7 +134,7 @@ fees. Now it's time to get your Validator running.
 With TNT in hand, it's time to deploy and run the actual Validator (can also be referred to as
 `miner` as the Validator is part of the `miner` code base).
 
-:::warning
+:::caution
 
 If you haven't already, please review the
 [Validator Technical Requirements](/mine-hnt/validators/requirements). Specifically, on non-ARM
