--- a/docs/mine-hnt/validators/testnet/wallet.mdx
+++ b/docs/mine-hnt/validators/testnet/wallet.mdx
@@ -21,7 +21,7 @@ to stake a Validator.
 
 :::
 
-:::warning
+:::caution
 
 Do NOT run or store the helium-wallet or wallet.key file on your Validator. Backup the wallet.key
 file and protect the password used to create the wallet.
@@ -67,7 +67,7 @@ obtain TNT needed for staking.
 
 To obtain TNT tokens visit [faucet.helium.wtf](https://faucet.helium.wtf/).
 
-:::warning
+:::caution
 
 Always make sure to inspect the transaction _before_ adding the **--commit** option to sign and
 submit it to the api. There is no undo.
