--- a/docs/mine-hnt/data-only-guides/kerlink.mdx
+++ b/docs/mine-hnt/data-only-guides/kerlink.mdx
@@ -15,7 +15,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 All Kerlink gateways share the same operating system, called KerOS. It is based on Linux and uses
 OPKG, however not directly.
 
-:::warning
+:::important
 
 Kerlink Gateways will only mine HNT through packet transfer, and is considered a Data Only Hotspot
 unless you purchase a Kerlink Miner specificlly designed for the Helium Network. The ability to mine
