--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -22,7 +22,7 @@ supported in the requirements section. This configuration can be achieved by ins
 **_helium_gateway_** service available on the [gateway-rs](https://github.com/helium/gateway-rs)
 repository.
 
-:::warning
+:::important
 
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2 they will earn $HNT
 only for Device Packet Transfer. Remember to keep an eye on
@@ -152,7 +152,7 @@ rak-gateway ttn-gateway[1886]: # BEACON sent so far: 0
 rak-gateway ttn-gateway[1886]: # BEACON rejected: 0
 ```
 
-:::note
+:::info
 
 `ttn-gateway` is just the name for the LoRa packet forwarder service in the configuration for these
 RAK concentrators; this is like a "legacy name" that doesn’t change when using different network
