downgrade warning admonition

--- a/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -53,7 +53,7 @@ As a Maker, if you only supply the one-time **Add Hotspot** fee and one **Assert
 you'll supply `5,135,000` total Data Credits per Hotspot. Add `1,070,000` Data Credits for each
 additional **Assert Location** fee you wish to supply.
 
-:::warning
+:::info
 
 If your wallet address does not have enough DCs to pay the required Hotspot transaction fees, these
 transactions will fail.
