--- a/docs/open-source/style-guide-formatting.mdx
+++ b/docs/open-source/style-guide-formatting.mdx
@@ -1,11 +1,11 @@
 ---
-id: style-guide
-title: Style Guide
-pagination_label: Style Guide
-sidebar_label: Style Guide
+id: style-guide-formatting
+title: Formatting Style Guide
+pagination_label: Formatting Style Guide
+sidebar_label: Formatting Style Guide
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /open-source/style-guide
+slug: /open-source/style-guide-formatting
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -16,36 +16,62 @@ You can write content using [GitHub-flavored Markdown syntax](https://github.git
 
 To serve as an example page when styling markdown based Docusaurus sites.
 
-### Headers
+---
 
-Helium Documention useds H1, H2, and H3 tags.
+## Headers
 
-- H4 tags are a _rare_ exception, likely an indicator that more sections are needed
+Helium Documention useses H1, H2, H3, and H4 tags.
 
 ```markdown
-# H1 - Create the best documentation
+# H1 - Page Title, though this comes from frontmatter as well.
 
-## H2 - Create the best documentation
+## H2 - Page Sections
 
-### H3 - Create the best documentation
+## H3 - Section Topics
+
+### H4 - Section Topic Examples, useful in "before/after" pairs
 ```
 
 ---
 
-### Emphasis
+## Separators
+
+Use Separators after the content below an H2 tag and before starting another H2 tag
+
+```markdown
+## First Topic
+
+topic summary
+
+## A Sub Topic
+
+subtopic details
+
+---
+
+## Another Topic
+
+additional topic summary
+```
+
+---
+
+## Emphasis
 
 - Emphasis, aka italics, with _underscores_.
 - Strong emphasis, aka bold, with **asterisks**.
 
 ---
 
-### Lists
+## Lists
 
 - list entries end in a period.
 - Use numberd lists in the order matters.
 - Use unordered lists when the order does not matter.
 
-#### Ordered List
+### Ordered List
+
+#### Ordered List Input
 
 ```markdown
 1. First ordered list item
@@ -56,16 +82,32 @@ Helium Documention useds H1, H2, and H3 tags.
 1. And another item.
 ```
 
-#### Unordered List
+#### Ordered List Output
+
+1. First ordered list item
+1. Another item
+   - Unordered sub-list.
+1. Actual numbers don't matter, just that it's a number
+   1. Ordered sub-list
+1. And another item.
+
+### Unordered List
+
+#### Unordered List Input
 
 ```markdown
 - Unordered lists use minuses
 - the order of these items does not matter
 ```
 
+#### Unordered List Output
+
+- Unordered lists use minuses
+- the order of these items does not matter
+
 ---
 
-### Links
+## Links
 
 Use "Reference-style" or "Inline-style" links only.
 
@@ -81,27 +123,21 @@ Use "Reference-style" or "Inline-style" links only.
 
 ---
 
-### Images
+## Images
 
 - below page front-matter include `import useBaseUrl from '@docusaurus/useBaseUrl'` to shorted image
   reference paths.
 - Use "Inline-style" iamge links only.
 
-```diff
-- before: ![helium-icon](img/icons/logowhite.svg)
-+  after: ![helium-icon](img/icons/logowhite.svg)
+```markdown
+<img className="docsheader" src={useBaseUrl('img/icons/logoblack.svg')} />
 ```
-
-Images from any folder can be used by providing path to file. Path should be relative to markdown
-file.
-
-#### Inline Style
 
 <img className="docsheader" src={useBaseUrl('img/icons/logoblack.svg')} />
 
 ---
 
-### Code
+## Code
 
 - Define code language in header.
 - prefix `<!-- prettier-ignore -->` to stop prettier from formatting when needed.
@@ -119,7 +155,7 @@ fn main() {
 }
 ```
 
-#### Code Highlighting
+### Code Highlighting
 
 You can use comments with comments to select which lines are highlighted. [Read More
 here][docusaurus-code-highlighting].
@@ -137,7 +173,7 @@ fn main() {
 
 ---
 
-### Tables
+## Tables
 
 Colons can be used to align columns.
 
@@ -149,19 +185,45 @@ Colons can be used to align columns.
 
 ---
 
-### Blockquotes
+## Blockquotes
+
+### Blockquote Input
+
+```markdown
+> Blockquotes are very handy in email to emulate reply text. This line is part of the same quote.
+
+Quote break.
+
+> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep
+> writing to make sure this is long enough to actually wrap for everyone.
+```
+
+### Blockquote Output
 
 > Blockquotes are very handy in email to emulate reply text. This line is part of the same quote.
 
 Quote break.
 
 > This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep
-> writing to make sure this is long enough to actually wrap for everyone. Oh, you can _put_ >
-> **Markdown** into a blockquote.
+> writing to make sure this is long enough to actually wrap for everyone.
 
 ---
 
-### Inline HTML
+## Inline HTML
+
+### Inline HTML Input
+
+```html
+<dl>
+  <dt>Definition list</dt>
+  <dd>Is something people use sometimes.</dd>
+
+  <dt>Markdown in HTML</dt>
+  <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
+</dl>
+```
+
+### Inline HTML Output
 
 <dl>
   <dt>Definition list</dt>
@@ -173,7 +235,7 @@ Quote break.
 
 ---
 
-### Admonitions
+## Admonitions
 
 :::info A Info Admonition
 
@@ -209,3 +271,7 @@ moments.
 
 [docusaurus-code-highlighting]:
   https://docusaurus.io/docs/markdown-features/code-blocks#highlighting-with-comments
+
+```
+
+```
