--- a/docs/solana/migration/hotspot-owner.mdx
+++ b/docs/solana/migration/hotspot-owner.mdx
@@ -39,4 +39,67 @@ Hotspots in your app.
 Because claiming is an explicit action now, you may want to enlist a service to claim rewards on all
 of your Hotspots.
 
-<!-- TODO: Service -->
+---
+
+## Hotspots on Solana
+
+- Hotspots will move to the new Solana blockchain, specifically performing off-chain
+  Proof-of-Coverage. More information on off-chain PoC can be found in
+  [HIP-70](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md#implementing-proof-of-coverage-oracles).
+- Makers will push a fleet-wide update to all their Hotspots that switches a Hotspot from receiving
+  Challenges from Validators to automatically beaconing by themselves every 6 hours and sending
+  results to an Off-Chain Oracle.
+- Makers must push this mandatory update to their fleet of Hotspots. Failure to do so will mean
+  their customers cease to mine and stop earning rewards once the blockchain migration is complete.
+
+### Hotspots Will Earn IOT
+
+Hotspot Owners will start earning IOT as the blockchain migration will launch the IOT subDAO. To
+view IOT earned by your Hotspot, use the Helium Wallet app. 5G Hotspot Owners will continue earning
+MOBILE and will additionally begin to earn IOT.
+
+:::note 5G Hotspot Owners
+
+Your 5G Hotspot will become an NFT, and your CBRS Radios will remain with a serial number, just like
+before the Solana transition.
+
+:::
+
+### Hotspots Become NFTs
+
+All Helium Hotspots will be represented as NFTs on the Solana blockchain. Wallet migration is
+required to view your Hotspot NFT(s) in the Helium Wallet app.
+
+<div class="container">
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--6 img-center">
+      <img
+        className="app-mockup"
+        src={useBaseUrl('img/wallets/helium-wallet-app/hotspot-app.png')}
+      />
+    </div>
+    <div class="col col--6 img-center">
+      <img
+        className="app-mockup"
+        src={useBaseUrl('img/wallets/helium-wallet-app/hotspot-as-nft.png')}
+      />
+    </div>
+  </div>
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--6 img-center">
+      <b>Hotspot in the current Helium app.</b>
+    </div>
+    <div class="col col--6 img-center">
+      <b>Hotspots NFTs in the new Helium Wallet app.</b>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col col--12 img-center">
+      <p>
+        <em>
+          Please note these images are for informational purposes only. Final design may change.
+        </em>
+      </p>
+    </div>
+  </div>
+</div>
