Mobile Sidebar Visibility Fixes (#1089)
* docs dark mode

* updating config to latest docusaurus templates

* remove random padding from svg images

* enable dark mode

* svg cleanup

* quick like arrow sizing

* lighten font in dark mode, button fixes

* wallet app icon set to black

* dark mode h4 font color

* add white background to images

* higher contrast side and nav bar in dark mode for mobile

* dark mode override css consolidation

* disable dark mode for now, mobile sidebar link visible

* darkmode element selectors correction

--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -22,7 +22,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/adafruit/adafruit-feather-m0-rfm95">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -35,7 +35,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/arduino/lora-vision-shield">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -48,7 +48,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/embit/emb-lr1280s">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
@@ -63,7 +63,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/heltec/cubecell-1-2-aa-node">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -76,7 +76,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/mcci/catena4610">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -91,7 +91,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/midatronics/sharky-module">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
@@ -106,7 +106,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/multi-tech/multi-tech-xdot">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -121,7 +121,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/rakwireless/wisblock-4631">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -136,7 +136,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/seeed-studio/loramodule-e5">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
@@ -151,7 +151,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/sparkfun/pro-rf">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -166,7 +166,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/opensourceinitiative/paxcounter">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
@@ -181,7 +181,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
