--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -22,7 +22,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/abeeway/abeeway-geolocation-module">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -35,7 +35,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/adeunis/adeunis-field-test-device">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -48,7 +48,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/aquascope/bvs">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -61,7 +61,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/beiselen/radar">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -76,7 +76,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/boatofficer/boatofficerblue">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -89,7 +89,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/bosch/tps110">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -102,7 +102,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/comtac/lpn-td1">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -115,7 +115,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/decentlab/dl-iam">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -128,7 +128,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/develiot/rwmr">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -143,7 +143,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/digital-matter/oyster">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -156,7 +156,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/dragino/rs485-ln">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -169,7 +169,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/enthutech/rs485-ln">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -182,7 +182,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/imst/range-extender">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -195,7 +195,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/iotsens/sound-device">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -208,7 +208,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/izinto/izi-io-4840">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -221,7 +221,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/laird/rs1xx-temp-rh-sensor">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -234,7 +234,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/mcf88/mcf-lw06davk">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -247,7 +247,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/mclimate/vicki">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -262,7 +262,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/milesight-iot/am107">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -275,7 +275,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/moko/lw001-bg">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -288,7 +288,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/netvox/r311a">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -301,7 +301,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/nwave/nps310sm">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -316,7 +316,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/rakwireless/rak7204">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -331,7 +331,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -344,7 +344,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/sensedge/senstick-pro">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -357,7 +357,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/tektelic/t000489x-smart-room-base">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -370,7 +370,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/tekzitel/tekzipark">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -385,7 +385,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/the-things-products/the-things-node">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -398,7 +398,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
     <div class="col col--6" style={{ marginBottom: 100 }}>
@@ -411,7 +411,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <p></p>
       <a href="/use-the-network/devices/ready-to-use/origo/lorawan-watch">
         {' '}
-        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        View Devices <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
     </div>
   </div>
