--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -81,7 +81,7 @@ the two most relevant for developers using the Network.
       </p>
       <a href="https://console.helium.com">
         Create Console Account{' '}
-        <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/use-the-network/console">
@@ -143,7 +143,7 @@ the two most relevant for developers using the Network.
         Network, using configured-trackers.
       </p>
       <a href="https://mappers.helium.com">
-        See the Map <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        See the Map <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/use-the-network/coverage-mapping">
