--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -47,7 +47,7 @@ $ http -b https://migration.web.test-helium.com/helium/13cQ6QUDvebHAppdmLYu9KXJv
 }
 ```
 
-4. Generate your Solana KeyPair
+4. Verify your Solana Public Key
 
 ```
 $ solana-keygen pubkey /var/data/13cQ6QUDvebHAppdmLYu9KXJvNZS9voVQCn8XrMbBemiLJ3r8Z5.solana.json
