Add balance verification step

--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -24,7 +24,7 @@ Paper Compatible Wallet. Follow the below instructions to migrate your wallet on
 **Note**: Each wallet can only be migrated once.<br /> **Note**: Testnet is using a snapshot from
 January 31st. Due to this testnet and mainnet balances may not match.
 
-1. Unlock wallet
+1. Unlock wallet.
 
 ```
 % http -b :4467 jsonrpc=2.0 id=1 method=wallet_unlock params:='{"address": "13cQ6QUDvebHAppdmLYu9KXJvNZS9voVQCn8XrMbBemiLJ3r8Z5", "password": "[snipped]"}'
@@ -38,7 +38,7 @@ $ http -b :4467 jsonrpc=2.0 id=1 method=wallet_export_secret params:='{"address"
 {"id":"1","jsonrpc":"2.0","result":true}
 ```
 
-3. Get your Solana address
+3. Get your Solana address.
 
 ```
 $ http -b https://migration.web.test-helium.com/helium/13cQ6QUDvebHAppdmLYu9KXJvNZS9voVQCn8XrMbBemiLJ3r8Z5
@@ -47,9 +47,15 @@ $ http -b https://migration.web.test-helium.com/helium/13cQ6QUDvebHAppdmLYu9KXJv
 }
 ```
 
-4. Verify your Solana Public Key
+4. Verify your Solana Public Key.
 
 ```
 $ solana-keygen pubkey /var/data/13cQ6QUDvebHAppdmLYu9KXJvNZS9voVQCn8XrMbBemiLJ3r8Z5.solana.json
 6ucMsEXv7KLW9V6dfGYAsx5PF4yy2hAB79nURwTuuzgN
+```
+
+5. Verify your token balance on devnet using a public explorer. Solana Explorer listed below.
+
+```
+https://explorer.solana.com/address/$SOLANA_ADDRESS?cluster=devnet
 ```
