--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -18,7 +18,7 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 ## Migrating wallet to Solana
 
-As of version 1.1.88 users can test the migration of their `blockchain-node` wallet to a Solana
+As of version [1.1.88](https://github.com/helium/blockchain-node/releases/tag/1.1.88) users can test the migration of their `blockchain-node` wallet to a Solana
 Paper Compatible Wallet. Follow the below instructions to migrate your wallet on testnet.
 
 **Note**: Each wallet can only be migrated once.<br /> **Note**: Testnet is using a snapshot from
